# Copyright (c) Huawei Device Co., Ltd. 2026-2026. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# Description: oe service utils test build.gn file

import("//build/test.gni")
import("//foundation/officeservice/object_editor/object_editor.gni")

module_out_path = "object_editor/object_editor"

config("utils_test_config") {
  include_dirs = [
    "${kits_path}/c",
    "${innerkits_path}/include",
    "${object_editor_path}/common/include",
    "${object_editor_path}/document/include",
    "${object_editor_path}/client/include",
    "${object_editor_path}/utils/include",
    "${object_editor_path}/utils/include/dfx",
    "${object_editor_path}/extension_ability/include",
    "${object_editor_path}/frameworks/kits/extension/include",
    "${object_editor_path}/frameworks/ndk/include",
    "${object_editor_path}/test/mock/",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
}

ohos_unittest("object_editor_event_manager_test") {
  module_out_path = module_out_path

  sources = [
    "object_editor_event_manager_test.cpp",
  ]

  deps = [
    "${object_editor_path}/utils:content_embed_utils",
  ]

  configs = [
    ":utils_test_config",
    "${object_editor_path}/resources/config/build:coverage_flags",
    "${object_editor_path}/resources/config/build:testcase_flags",
  ]

  external_deps = [
    "hilog:libhilog",
    "common_event_service:cesfwk_innerkits",
    "safwk:system_ability_fwk",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
    "bundle_framework:bundle_napi_common",
    "c_utils:utils",
    "os_account:os_account_innerkits",
    "googletest:gmock",
  ]

  defines = [
    "private=public",
  ]

  part_name = "object_editor"
  subsystem_name = "officeservice"
}

ohos_unittest("object_editor_screen_change_receiver_test") {
  module_out_path = module_out_path

  sources = [
    "object_editor_screen_change_receiver_test.cpp",
  ]

  deps = [
    "${object_editor_path}/utils:content_embed_utils",
  ]

  configs = [
    ":utils_test_config",
    "${object_editor_path}/resources/config/build:coverage_flags",
    "${object_editor_path}/resources/config/build:testcase_flags",
  ]

  external_deps = [
    "hilog:libhilog",
    "common_event_service:cesfwk_innerkits",
    "safwk:system_ability_fwk",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
    "bundle_framework:bundle_napi_common",
    "c_utils:utils",
    "os_account:os_account_innerkits",
    "googletest:gmock",
  ]

  defines = [
    "private=public",
  ]

  part_name = "object_editor"
  subsystem_name = "officeservice"
}

ohos_unittest("object_editor_permission_utils_test") {
  module_out_path = module_out_path

  sources = [
    "object_editor_permission_utils_test.cpp",
  ]

  deps = [
    "${object_editor_path}/utils:content_embed_utils",
  ]

  configs = [
    ":utils_test_config",
    "${object_editor_path}/resources/config/build:coverage_flags",
    "${object_editor_path}/resources/config/build:testcase_flags",
  ]

  external_deps = [
    "hilog:libhilog",
    "common_event_service:cesfwk_innerkits",
    "safwk:system_ability_fwk",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
    "bundle_framework:bundle_napi_common",
    "c_utils:utils",
    "os_account:os_account_innerkits",
    "googletest:gmock",
  ]

  defines = [
    "private=public",
  ]

  part_name = "object_editor"
  subsystem_name = "officeservice"
}

ohos_unittest("object_editor_bms_utils_test") {
  module_out_path = module_out_path

  sources = [
    "object_editor_bms_utils_test.cpp",
  ]

  deps = [
    "${object_editor_path}/utils:content_embed_utils",
  ]

  configs = [
    ":utils_test_config",
    "${object_editor_path}/resources/config/build:coverage_flags",
    "${object_editor_path}/resources/config/build:testcase_flags",
  ]

  external_deps = [
    "hilog:libhilog",
    "common_event_service:cesfwk_innerkits",
    "safwk:system_ability_fwk",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
    "bundle_framework:bundle_napi_common",
    "c_utils:utils",
    "os_account:os_account_innerkits",
    "googletest:gmock",
  ]

  defines = [
    "private=public",
  ]

  part_name = "object_editor"
  subsystem_name = "officeservice"
}

group("utils_unittest") {
  testonly = true

  deps = [
    ":object_editor_event_manager_test",
    ":object_editor_screen_change_receiver_test",
    ":object_editor_permission_utils_test",
    ":object_editor_bms_utils_test",
  ]
}