# Copyright (c) Huawei Device Co., Ltd. 2026-2026. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# Description: oe service extension test build.gn file

import("//build/test.gni")
import("//foundation/officeservice/object_editor/object_editor.gni")

module_out_path = "object_editor/unittest"

config("extension_test_config") {
  include_dirs = [
    "${kits_path}/c",
    "${innerkits_path}/include",
    "${object_editor_path}/common/include",
    "${object_editor_path}/document/include",
    "${object_editor_path}/client/include",
    "${object_editor_path}/utils/include/dfx",
    "${object_editor_path}/extension_ability/include",
    "${object_editor_path}/frameworks/kits/extension/include",
    "${object_editor_path}/frameworks/ndk/include",
    "${object_editor_path}/test/mock/",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
}

ohos_unittest("object_editor_extension_test") {
  module_out_path = module_out_path

  sources = [
    "object_editor_extension_test.cpp",
  ]

  deps = [
    "${object_editor_path}/frameworks/kits/extension:content_embed_extension",
    "${object_editor_path}/document:content_embed_document",
  ]

  configs = [
    ":extension_test_config",
    "${object_editor_path}/resources/config/build:coverage_flags",
    "${object_editor_path}/resources/config/build:testcase_flags",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:ability_start_options",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "ability_runtime:extensionkit_native",
    "ability_runtime:napi_common",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "googletest:gmock",
    "googletest:gtest_main",
    "hilog:libhilog",
    "image_framework:image_native",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "ipc:ipc_single",
    "napi:ace_napi",
    "samgr:samgr_proxy",
    "safwk:system_ability_fwk",
  ]

  defines = [
    "private=public",
  ]

  part_name = "object_editor"
  subsystem_name = "officeservice"
}

ohos_unittest("object_editor_extension_context_test") {
  module_out_path = module_out_path

  sources = [
    "object_editor_extension_context_test.cpp",
  ]

  deps = [
    "${object_editor_path}/frameworks/kits/extension:content_embed_extension",
    "${object_editor_path}/document:content_embed_document",
  ]

  configs = [
    ":extension_test_config",
    "${object_editor_path}/resources/config/build:coverage_flags",
    "${object_editor_path}/resources/config/build:testcase_flags",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:ability_start_options",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "ability_runtime:extensionkit_native",
    "ability_runtime:napi_common",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "googletest:gmock",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_core",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  defines = [
    "private=public",
  ]

  part_name = "object_editor"
  subsystem_name = "officeservice"
}

ohos_unittest("object_editor_extension_module_loader_test") {
  module_out_path = module_out_path

  sources = [
    "object_editor_extension_module_loader_test.cpp",
  ]

  deps = [
    "${object_editor_path}/frameworks/kits/extension:content_embed_extension_module",
    "${object_editor_path}/frameworks/kits/extension:content_embed_extension",
  ]

  configs = [
    ":extension_test_config",
    "${object_editor_path}/resources/config/build:coverage_flags",
    "${object_editor_path}/resources/config/build:testcase_flags",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_runtime",
    "ability_runtime:abilitykit_native",
    "ability_runtime:runtime",
    "c_utils:utils",
    "googletest:gmock",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]

  defines = [
    "private=public",
  ]

  part_name = "object_editor"
  subsystem_name = "officeservice"
}

group("extension_unittest") {
  testonly = true

  deps = [
    ":object_editor_extension_test",
    ":object_editor_extension_context_test",
    ":object_editor_extension_module_loader_test",
  ]
}